--- a/gb/21/6/6/n13003236.md
+++ b/gb/21/6/6/n13003236.md
@@ -1,14 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jokqkt383/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>六四纪念32周年 揭中共病毒雕像求真相</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>加州沙漠雕塑公园纪念六四 国会议员史密斯出席</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003252-f457d91f234a21d5537dbf96906f20d5-e1622992981787.jpg" />
 <h6>6月4日（周五），加州自由雕塑公园（Liberty Sculpture Park）举办六四32周年纪念活动，图为共和党籍众议员克里斯?史密斯（Chris Smith）演讲致词。（徐绣惠／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年06月06日讯】（大纪元记者徐绣惠圣贝纳迪诺报导）6月4日（周五），<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E8%87%AA%E7%94%B1%E9%9B%95%E5%A1%91%E5%85%AC%E5%9B%AD.md#1">加州自由雕塑公园</a>（Liberty Sculpture Park）聚集了三百余位来自全美各地的关心人士共同<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B32%E5%91%A8%E5%B9%B4.md#1">纪念六四32周年</a>，并参与“中共病毒”（新冠病毒、Covid-19）雕像竣工仪式，以及“共产主义受难者纪念馆”奠基仪式。</p>
-<figure id="attachment_13003268" aria-describedby="caption-attachment-13003268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003268-d8bd8630fcce3a5ea701410e81652d21.jpg"><img class="size-large wp-image-13003268" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003268-d8bd8630fcce3a5ea701410e81652d21-600x376.jpg" alt="" width="600" b="376" /></a><figcaption id="caption-attachment-13003268" class="wp-caption-text">6月4日（周五），<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E8%87%AA%E7%94%B1%E9%9B%95%E5%A1%91%E5%85%AC%E5%9B%AD.md#1">加州自由雕塑公园</a>（Liberty Sculpture Park）举行“共产主义受难者纪念馆”奠基破土仪式。（徐绣惠／大纪元）</figcaption></figure>
-<p>长期关注大陆人权现况，并常予中共严厉批评的共和党籍众议员克里斯?史密斯（Chris Smith）以及海外民运人士魏京生、王丹、方政、傅希秋、金秀红等人士在现场发言，汉学家林培瑞（Perry Link）、<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>香港论坛代表、女权无疆界主席瑞洁（Reggie Littlejohn）、巴斯托市长考特尼（Paul Courtney）到场支持。</p>
+	<p>【大纪元2021年06月06日讯】（大纪元记者徐绣惠圣贝纳迪诺采访报导）6月4日（周五），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E8%87%AA%E7%94%B1%E9%9B%95%E5%A1%91%E5%85%AC%E5%9B%AD.md#1">加州自由雕塑公园</a>（Liberty Sculpture Park）聚集了三百余位来自全美各地的关心人士共同<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B32%E5%91%A8%E5%B9%B4.md#1">纪念六四32周年</a>，并参与“中共病毒”（新冠病毒、Covid-19）雕像竣工仪式，以及“共产主义受难者纪念馆”奠基仪式。</p>
+<figure id="attachment_13003268" aria-describedby="caption-attachment-13003268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003268-d8bd8630fcce3a5ea701410e81652d21.jpg"><img class="size-large wp-image-13003268" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003268-d8bd8630fcce3a5ea701410e81652d21-600x376.jpg" alt="" width="600" b="376" /></a><figcaption id="caption-attachment-13003268" class="wp-caption-text">6月4日（周五），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E8%87%AA%E7%94%B1%E9%9B%95%E5%A1%91%E5%85%AC%E5%9B%AD.md#1">加州自由雕塑公园</a>（Liberty Sculpture Park）举行“共产主义受难者纪念馆”奠基破土仪式。（徐绣惠／大纪元）</figcaption></figure>
+<p>长期关注大陆人权现况，并常予中共严厉批评的共和党籍国会众议员克里斯?史密斯（Chris Smith）出席了活动，并发表演讲。史密斯议员表示，1989年6月4日，中国人民曾经在北京天安门广场要求政府尊重人权和法治，可悲的是，中国共产党使用了暴力镇压。但中国人们追求民主改革的声音在世界其他地方广传，包括前苏联、东欧国家和罗马尼亚，多少都受到了六四事件的鼓舞，而他们成功地推翻了极权暴政。</p>
+<p>史密斯议员说：“人们需要知道，爱国主义和对国家的尊重不是对中国共产党的尊重，它（中共）的目标，它的方法，特别是普遍地使用酷刑，是与尊重人的生命和人权背道而驰的。”</p>
+<p>海外民运人士魏京生、王丹、方政、傅希秋、金秀红等人亦与会发言。汉学家林培瑞（Perry Link）、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>香港论坛代表人、女权无疆界主席瑞洁（Reggie Littlejohn）、巴斯托市长考特尼（Paul Courtney）亦到场支持。</p>
 <h2>陈维明：将中共钉在历史耻辱柱</h2>
 <p>“我们要昭示全世界，病毒源于中共，要将中共钉在历史的耻辱柱上。”加州自由雕塑公园负责人的陈维明说。逾三尺高的“中共病毒”雕像耗时半年多才完成，是雕塑家陈维明与友人苏立德以及多位义工的辛劳创作。陈维明表示：“作为一个艺术家，我有责任把它表现出来，（危害全球的）这个病毒源自中共政治上的病毒，如果没中共政治病毒与独裁专制的传播，不可能在西方民主社会（传播）；有媒体、记者监督下，不可能将疫情隐瞒下来，让病毒扩散到全世界。”</p>
 <figure id="attachment_13003270" aria-describedby="caption-attachment-13003270" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003270-c6297f45b365d8e68b5a8b4b15849013.jpg"><img class="size-large wp-image-13003270" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003270-c6297f45b365d8e68b5a8b4b15849013-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-13003270" class="wp-caption-text">加州自由雕塑公园负责人、雕塑家陈维明于纪念六四活动发言，他与义工协做大型雕塑“中共病毒”，将中共钉在历史耻辱柱。（新唐人电视台提供）</figcaption></figure>
@@ -17,13 +19,13 @@
 <h2>魏京生：中共已经隐瞒不住了</h2>
 <p>中国民主运动海外联席会议主席魏京生表示，全球大流行的中共病毒疫情从一开始他就觉得可能与中共有关。他说：“共产党掩盖证据是有一套的，有几十年历史，但现在大家都知道了，美国政府也在调查，那就是有一定的证据了，也相信这是中共造出来的。中共作恶那么多年，没有什么事不能干，尽管是你想不出来的坏事，中共也都能干得出来。中共使用生化战的方法对付异议人士也有很多年的历史，这些都有实据。”</p>
 <figure id="attachment_13003277" aria-describedby="caption-attachment-13003277" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003277-2a8637bff3f13849e9300d85e1801f1a.jpg"><img class="size-large wp-image-13003277" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003277-2a8637bff3f13849e9300d85e1801f1a-600x374.jpg" alt="" width="600" b="374" /></a><figcaption id="caption-attachment-13003277" class="wp-caption-text">魏京生（右）认为中共已难以为继。（徐绣惠／大纪元）</figcaption></figure>
-<p>魏京生表示，过去中共给中国人带来很大的灾难，死了好几千万人，而且这些统计数字都是被缩小了，就像六四的死亡人数可能就多达一万人，北京市接收的死尸就是七、八千人。他说：“虽然很多人不敢想像，但实际上共产党的残酷、野蛮不是大家可以想像出来的。这次病毒也是一样，到了这个程度，害死全世界这么多人，全世界终于慢慢醒过来了。”首先要从调查开始，共产党虽然仍一个劲地隐瞒，但也隐瞒不住了，反对共产党不只是中国人的事情了，是全世界人民的事情，终结中共的希望也越来越大。</p>
+<p>魏京生表示，过去中共给中国人带来很大的灾难，死了好几千万人，而且这些统计数字都是被缩小了，就像六四的死亡人数可能就多达一万人，北京市接收的死尸就是七八千人。他说：“虽然很多人不敢想像，但实际上共产党的残酷、野蛮不是大家可以想像出来的。这次病毒也是一样，到了这个程度，害死全世界这么多人，全世界终于慢慢醒过来了。”首先要从调查开始，共产党虽然仍一个劲地隐瞒，但也隐瞒不住了，反对共产党不只是中国人的事情了，是全世界人民的事情，终结中共的希望也越来越大。</p>
 <p>魏京生认为，中国新一代的年轻人不了解历史没有关系，他说：“他们知不知道六四没关系，知道共产党的罪恶，知道自己在受苦，知道自己的父母还有兄弟姊妹在受迫害就够了。”只要时机到来，有人振臂一呼，中共的政权就难以为继了。</p>
 <h2>方政：全球问责中共 追查真相</h2>
 <p>六四天安门事件当天双腿遭坦克碾断的中国民主教育基金会主席方政表示，中共就是一个谎言加暴力的政权，他说：“从反右、文革到六四，再到法轮功镇压，到现在这些的病毒，一切一切有太多的真相事实在被掩盖、遭歪曲，对国际社会来说，首先就是要问责，大家要去追责。</p>
 <figure id="attachment_13003279" aria-describedby="caption-attachment-13003279" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003279-8bfb4916eaa164208f3eec16e6166f2d.jpg"><img class="size-large wp-image-13003279" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003279-8bfb4916eaa164208f3eec16e6166f2d-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13003279" class="wp-caption-text">方政呼吁全世界人们问责中共、追查真相。（徐绣惠／大纪元）</figcaption></figure>
 <p>多年来人们纪念六四就是要向中共追讨真相，方政说：“六四是中国的问题，但现在病毒是全世界的话题。全世界的力量一起来要求真相，有了真相之后就要追责，当然中共现在很害怕，用各种方法去掩盖，基于对中共本质的认识，千万不能放松。”</p>
-<p>尽管中共动员国家机器，用了各种方式掩盖真相，收买各国政要、媒体，但只要人们追寻真相，中共自然就会瓦解。方政说：“我们今天为什么要有这个<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B32%E5%91%A8%E5%B9%B4.md#1">纪念六四32周年</a>的集会？为什么要制作<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92%E9%9B%95%E5%83%8F.md#1">中共病毒雕像</a>？就是要唤醒全世界去问责，不能停止对中共所有真相的问责，有了真相中共自然不会存在，罪行暴露于世以后（中共）就自然会垮台。”</p>
+<p>尽管中共动员国家机器，用了各种方式掩盖真相，收买各国政要、媒体，但只要人们追寻真相，中共自然就会瓦解。方政说：“我们今天为什么要有这个<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B32%E5%91%A8%E5%B9%B4.md#1">纪念六四32周年</a>的集会？为什么要制作<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92%E9%9B%95%E5%83%8F.md#1">中共病毒雕像</a>？就是要唤醒全世界去问责，不能停止对中共所有真相的问责，有了真相中共自然不会存在，罪行暴露于世以后（中共）就自然会垮台。”</p>
 <h2>程翔：强权压不垮基本人性</h2>
 <p>资深香港媒体人程翔认为，现在香港已经全面大陆化，但仍有很多人冒着被逮捕的危险，用自己创意的方式纪念六四。例如，以麦当劳早餐的薯饼、火腿肠与番茄酱完成“六四坦克屠城”的图样。该照片在社交媒体上广传，引起广泛注意，这说明香港人不会忘却六四，也没有被中共打垮，拥有“基本”人性。</p>
 <figure id="attachment_13003282" aria-describedby="caption-attachment-13003282" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003282-7f3a1b27c256745428329a6620c6f81d.jpg"><img class="size-large wp-image-13003282" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003282-7f3a1b27c256745428329a6620c6f81d-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-13003282" class="wp-caption-text">资深香港媒体人程翔认为香港人悼念六四代表基本的人性。（新唐人电视台提供）</figcaption></figure>
@@ -32,7 +34,7 @@
 <h2>不同世代华人 共同铭记六四</h2>
 <p>93岁高龄的印尼华侨冯国蒋说：“不要忘记共产党暴政的历史，因为中共不断地消灭着它犯罪的历史，我们的责任就是保留历史。”1949年响应中共号召回国，在中国生活了30年的冯国蒋毕业于清华大学，并曾因反对毛泽东的暴政被劳改20年，他说：“我们一定要揭露中共的真面目。”</p>
 <figure id="attachment_13003283" aria-describedby="caption-attachment-13003283" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003283-1761df1a3b2fabcce6351bd780b3227d.jpg"><img class="size-large wp-image-13003283" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003283-1761df1a3b2fabcce6351bd780b3227d-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-13003283" class="wp-caption-text">93岁高龄的印尼华侨冯国蒋认为揭露中共罪恶历史是每个人的责任。（新唐人电视台提供）</figcaption></figure>
-<p>1995年冯国蒋从香港移民美国，他表示赶在1997年香港回归前离开是因为不愿意生活在中共暴政统治之下。“现在证明我的看法是对的，现在香港沦为非常悲惨的地方，我非常同情香港人。”他说。</p>
+<p>1995年冯国蒋从香港移民美国，他表示赶在1997年香港主权移交前离开是因为不愿意生活在中共暴政统治之下。“现在证明我的看法是对的，现在香港沦为非常悲惨的地方，我非常同情香港人。”他说。</p>
 <p>1995年出生的倪宇凡与他的同龄人一样，几乎没有听过“六四”，是后来无意间在网路翻墙时才得知讯息。他说：“89六四的讯息封锁，是中共对内地老百姓的监管，它们（中共）害怕大家知道真相。我相信随着越来越多人走出国门，越来越多的年轻人以及他们的上一代都会觉醒。当知道中共是一个邪恶组织、是一个恐怖集团后，更多人会站出来反抗，这将让生活在那片土地的14亿人享受民主。”</p>
 <figure id="attachment_13003287" aria-describedby="caption-attachment-13003287" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13003287-3c4404510d2d438c6aeb4be6d8c97fde.jpg"><img class="size-large wp-image-13003287" src="https://i.epochtimes.com/assets/uploads/2021/06/id13003287-3c4404510d2d438c6aeb4be6d8c97fde-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-13003287" class="wp-caption-text">中国90后倪宇凡特别从华府前来加州自由雕塑公园参与纪念六四的活动。（新唐人电视台提供）</figcaption></figure>
 <p>2019年移民美国后，倪宇凡每年都会参与六四的纪念活动。他说：“六四是每个中国人，甚至是每个人都应该纪念的活动，我们被谎言欺骗了那么多年。（当年）和我一样大的孩子、甚至比我还小的孩子，他们被坦克车辗压、机枪扫射，他们的生命才刚刚开始；（如今）我们在美国自由的土地上，当然要纪念。”◇</p>
@@ -42,41 +44,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13000673.md#1">纽约纪念六四32周年 “共产党滚进坟墓”响彻法拉盛</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001732.md#1">圣地亚哥香港之友纪念六四32周年</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001750.md#1">伦敦逾千人集会 纪念六四为港人发声</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001808.md#1">点起蜡烛 香港人在德国各地纪念六四</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/5/n13000673.md#1">纽约纪念六四32周年 “共产党滚进坟墓”响彻法拉盛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/5/n13001732.md#1">圣地亚哥香港之友纪念六四32周年</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/5/n13001750.md#1">伦敦逾千人集会 纪念六四为港人发声</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/5/n13001808.md#1">点起蜡烛 香港人在德国各地纪念六四</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12982017.md#1">瘟神散疫失误错杀人 轮回堕凡间偿罪</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12992137.md#1">【忠义传】以身挡敌 曹操的首席保镖典韦</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001155.md#1">【唐浩视界】百万疫苗急援台湾 重挫中共逼统</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001990.md#1">【新闻看点】广州全城检测 7市5600医护驰援</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000140.md#1">【秦鹏直播】谁是石的外国帮凶 蓬佩奥打开蠕虫罐</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997119.md#1">美禁投资59中共军工及监控企业 名单一览</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996466.md#1">组图：六四现场回顾 天安门广场一夕变色</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12998543.md#1">在火星上拍到闪光云 云里有冰晶</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997045.md#1">邓紫棋中国献唱疑自我审查 敏感字眼遭修改歌词</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999803.md#1">胡歌观看前女友演音乐剧 分手12年再传复合？</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999132.md#1">林志玲护台抗疫 隔海捐6座“正压检疫亭”</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000154.md#1">蒋欣晒吃饭自拍照 网民：难怪能瘦那么多</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000002.md#1">一众港星悼“六四” 杜汶泽讽中共掩盖罪行</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996124.md#1">几种含丰富营养的超级食品 值得花钱</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12997785.md#1">新冠疫苗3大副作用 医师教你简单方法缓解</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996569.md#1">糖化让你变老、生病！改变烹调方式降糖化12倍</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/2/n12993841.md#1">发烧、嗅觉丧失怎么办？新冠7大症状自我缓解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/6/n13003236.htm">六四纪念32周年 揭中共病毒雕像求真相</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/6/n13003236.htm">加州沙漠雕塑公园纪念六四 国会议员史密斯出席</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jokqkt383/djy/blob/master/gb/21/6/6/n13003236.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/6/6/n13003236.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
